--- a/webpages/style.css
+++ b/webpages/style.css
@@ -169,7 +169,7 @@ h2:hover::after{
 }
 .academic-col{
     flex-basis: 35%;
-    background: #fbebff;
+    background: #f0ddff;
     border-radius: 15px;
     margin-bottom: 5%;
     padding: 30px 15px;
