--- a/webpages/style.css
+++ b/webpages/style.css
@@ -274,7 +274,7 @@ h3{
 .footer{
     width: 100%;
     text-align: center;
-    background-image: linear-gradient(rgba(65, 65, 65, 0.7),rgba(0, 0, 0, 0.786));
+    background-image: linear-gradient(rgba(150, 150, 150, 0.7),rgba(0, 0, 0, 0.786));
     padding: 30px 0;
 }
 .footer h3{
@@ -287,8 +287,12 @@ h3{
     font-weight: 800;
     font-size: 25px;
 }
+.footer h5{
+    font-size: 15px;
+    margin: auto;
+}
 .icons .fa{
-    color: #f44336;
+    color: rgb(255, 0, 0);
     margin: 0 13px;
     cursor: pointer;
     padding: 18px 0;
