--- a/webpages/style1.css
+++ b/webpages/style1.css
@@ -103,35 +103,11 @@ nav{
 }
 .fac-col img{
     width: 90%;
+    height: 67%;
     display: block;
 }
-.laayer{
-    background: transparent;
-    width: 91%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    transition: 0.5s;
-}
-.laayer:hover{
-    background: rgba(226, 0, 0, 0.7);
-}
-.laayer h3{
-    width: 100%;
-    font-weight: 500;
-    color: #fff;
-    font-size: 20px;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    position: absolute;
-    opacity: 0;
-    transition: 0.5s;
-}
-.laayer:hover h3{
-    bottom: 50%;
-    opacity: 1;
+.fac-col h3{
+    padding-top: 20%
 }
 .t-t{
     width: 100%;
